--- a/sdk/clientcore/optional-dependency-tests/pom.xml
+++ b/sdk/clientcore/optional-dependency-tests/pom.xml
@@ -109,6 +109,12 @@
       <version>1.37</version> <!-- {x-version-update;org.openjdk.jmh:jmh-generator-annprocess;external_dependency} -->
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>io.clientcore</groupId>
+          <artifactId>core</artifactId>
+          <version>1.0.0-beta.2</version>
+          <scope>test</scope>
+      </dependency>
   </dependencies>
 
   <profiles>
