ClientCore tracing zero dependencies, no plugins (#43346)
ClientCore tracing zero dependencies, no plugins

--- a/sdk/clientcore/ci.yml
+++ b/sdk/clientcore/ci.yml
@@ -50,3 +50,6 @@ extends:
         groupId: io.clientcore
         safeName: httpokhttp3
         releaseInBatch: ${{ parameters.release_clientcorehttpokhttp3 }}
+    AdditionalModules:
+      - name: optional-dependency-tests
+        groupId: io.clientcore
