--- a/sdk/parents/azure-client-sdk-parent/pom.xml
+++ b/sdk/parents/azure-client-sdk-parent/pom.xml
@@ -1034,7 +1034,7 @@
             <pipelineConfiguration>
               <filters>
                 <include>
-                  <item>azure-sdk-tree-provider</item>
+                  <item>class-and-package-tree-filter-provider</item>
                 </include>
               </filters>
             </pipelineConfiguration>
@@ -1054,6 +1054,11 @@
               <groupId>org.revapi</groupId>
               <artifactId>revapi-reporter-json</artifactId>
               <version>0.4.5</version> <!-- {x-version-update;org.revapi:revapi-reporter-json;external_dependency} -->
+            </dependency>
+            <dependency>
+              <groupId>com.fasterxml.jackson.core</groupId>
+              <artifactId>jackson-databind</artifactId>
+              <version>2.17.2</version> <!-- {x-version-update;com.fasterxml.jackson.core:jackson-databind;external_dependency} -->
             </dependency>
           </dependencies>
         </plugin>
