Move clientcore to its own RevApi configuration file

--- a/sdk/parents/clientcore-parent/pom.xml
+++ b/sdk/parents/clientcore-parent/pom.xml
@@ -962,7 +962,7 @@
             <convertAnalysisConfigurationFiles>true</convertAnalysisConfigurationFiles>
             <analysisConfigurationFiles>
               <configurationFile>
-                <resource>revapi/revapi.json</resource>
+                <resource>revapi/clientcore-revapi.json</resource>
               </configurationFile>
             </analysisConfigurationFiles>
             <versionFormat>^\d+\.\d+\.\d+$</versionFormat>
