--- a/eng/.docsettings.yml
+++ b/eng/.docsettings.yml
@@ -108,6 +108,7 @@ known_content_issues:
   - ['sdk/clientcore/README.md', '#3113']
   - ['sdk/clientcore/core/README.md', '#3113']
   - ['sdk/clientcore/http-okhttp3/README.md', '#3113']
+  - ['sdk/clientcore/tools/annotation-processor/README.md', '#3113']
   - ['sdk/clientcore/optional-dependency-tests/README.md', '#3113']
   - ['sdk/core/azure-core-experimental/README.md', '#3113']
   - ['sdk/cosmos/faq/README.md', '#3113']
