--- a/sdk/clientcore/tools/pom.xml
+++ b/sdk/clientcore/tools/pom.xml
@@ -5,15 +5,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.clientcore</groupId>
-  <artifactId>clientcore-service</artifactId>
+  <artifactId>clientcore-tools-parent</artifactId>
   <packaging>pom</packaging>
-  <version>1.0.0</version><!-- Need not change for every release-->
-
+  <version>1.0.0</version> <!-- Need not change for every release-->
   <modules>
-    <module>core</module>
-    <module>http-okhttp3</module>
-    <module>optional-dependency-tests</module>
-    <module>http-stress</module>
-    <module>tools</module>
+    <module>annotation-processor</module>
   </modules>
 </project>
