--- a/sdk/clientcore/optional-dependency-tests/pom.xml
+++ b/sdk/clientcore/optional-dependency-tests/pom.xml
@@ -70,7 +70,7 @@
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-simple</artifactId>
-      <version>2.0.16</version> <!-- {x-version-update;org.slf4j:slf4j-simple;external_dependency} -->
+      <version>2.0.16</version> <!-- {x-version-update;clientcore_dep_tests_org.slf4j:slf4j-simple;external_dependency} -->
       <scope>test</scope>
     </dependency>
     <dependency>
