--- a/sdk/parents/azure-client-sdk-parent/pom.xml
+++ b/sdk/parents/azure-client-sdk-parent/pom.xml
@@ -1701,7 +1701,7 @@
       <id>external-dependency-version-overrides</id>
       <activation>
         <property>
-          <name>env.AZURE_VERSION_OVERRIDE_TESTS</name>
+          <name>env.VERSION_OVERRIDE_TESTS</name>
         </property>
       </activation>
       <repositories>
