Testing a change, will not be checked in

--- a/eng/pipelines/templates/jobs/ci.yml
+++ b/eng/pipelines/templates/jobs/ci.yml
@@ -11,6 +11,9 @@ parameters:
   - name: Artifacts
     type: object
     default: []
+  - name: ExcludePaths
+    type: object
+    default: []
   - name: ReleaseArtifacts
     type: object
     default: []
@@ -89,338 +92,13 @@ jobs:
               - '!sdk/**/test-recordings'
               - '!sdk/**/session-records'
 
-      - template: /eng/pipelines/templates/steps/generate-project-list-and-cache-maven-repository.yml
-        parameters:
-          JobType: 'Build'
-
-      - task: UsePythonVersion@0
-        displayName: 'Use Python $(PythonVersion)'
-        inputs:
-          versionSpec: $(PythonVersion)
-
-      # This step needs to run before we update to using dev versions otherwise dependency
-      # check in the script will not fully work because the versions will mismatch
-      - task: PowerShell@2
-        displayName: Generate directories variable for sparse checkout
-        inputs:
-          pwsh: true
-          filePath: $(Build.SourcesDirectory)/eng/scripts/Generate-ServiceDirectories-From-Project-List.ps1
-          arguments: >
-            -SourcesDirectory $(Build.SourcesDirectory)
-            -ProjectList $(ProjectList)
-
-      # Skip sparse checkout for the `azure-sdk-for-<lang>-pr` private mirrored repositories
-      # as we require the GitHub service connection to be loaded.
-      - ${{ if not(contains(variables['Build.DefinitionName'], 'java-pr')) }}:
-        - template: /eng/pipelines/templates/steps/sparse-checkout-repo-initialized.yml
-          parameters:
-            Paths: $(SparseCheckoutDirectories)
-            SkipCheckoutNone: true
-
-      - ${{ parameters.PreBuildSteps }}
-
-      - script: |
-          echo "##vso[build.addbuildtag]Scheduled"
-        displayName: 'Tag scheduled builds'
-        condition: and(succeeded(), eq(variables['Build.SourceBranchName'],'main'),eq(variables['Build.Reason'],'Schedule'))
-
-      - template: /eng/common/pipelines/templates/steps/set-test-pipeline-version.yml
-        parameters:
-          PackageNames: "azure-sdk-template,azure-sdk-template-two,azure-sdk-template-three"
-          ServiceDirectory: "template"
-          TestPipeline: ${{ parameters.TestPipeline }}
-
-      - template: /eng/common/pipelines/templates/steps/daily-dev-build-variable.yml
-        parameters:
-          ServiceDirectory: ${{parameters.ServiceDirectory}}
-
-      - task: PowerShell@2
-        displayName: Setup Dev versioning
-        condition: and(succeeded(), eq(variables['SetDevVersion'],'true'))
-        inputs:
-          pwsh: true
-          filePath: eng/pipelines/scripts/Set-Dev-Versioning.ps1
-          arguments: >
-            -BuildNumber $(Build.BuildNumber)
-            -SdkType ${{parameters.SDKType}}
-        env:
-          ARTIFACTSJSON: $(ArtifactsJson)
-
-      - ${{if ne(parameters.ServiceDirectory, '')}}:
-        - task: Powershell@2
-          inputs:
-            filePath: $(Build.SourcesDirectory)/eng/common/scripts/Save-Package-Properties.ps1
-            arguments: >
-              -ServiceDirectory ${{parameters.ServiceDirectory}}
-              -OutDirectory $(Build.ArtifactStagingDirectory)/PackageInfo
-              -AddDevVersion
-            pwsh: true
-            workingDirectory: $(Pipeline.Workspace)
-          displayName: Update package properties with dev version
-          condition: and(succeeded(), eq(variables['SetDevVersion'],'true'))
-
-      - script: |
-          python -m pip install markdown2==2.4.6 BeautifulSoup4==4.11.1
-        displayName: 'pip install markdown2 and BeautifulSoup4'
-
-      - task: Maven@4
-        displayName: 'Build and Package, JDK Version: ${{ parameters.JavaBuildVersion }}'
-        inputs:
-          mavenPomFile: pom.xml
-          goals: 'deploy'
-          options: '$(DefaultOptions) -T ${{parameters.BuildParallelization}} -DskipTests -Dgenerate-overview -Dspotbugs.skip=true -Dcheckstyle.skip=true -Drevapi.skip=true -Dspotless.apply.skip=true -pl $(ProjectList) -am -DaltDeploymentRepository=id::default::file://$(System.DefaultWorkingDirectory)/build' # We include template-module so we ensure it always builds in CI
-          mavenOptions: '$(MemoryOptions) $(LoggingOptions)'
-          javaHomeOption: 'JDKVersion'
-          jdkVersionOption: ${{ parameters.JavaBuildVersion }}
-          jdkArchitectureOption: 'x64'
-          publishJUnitResults: false
-
-      - task: PowerShell@2
-        displayName: 'Verify Required Maven Artifacts'
-        inputs:
-          pwsh: true
-          workingDirectory: $(Agent.BuildDirectory)
-          filePath: eng/scripts/Verify-Required-Maven-Artifacts.ps1
-          arguments: >
-            -BuildOutputDirectory $(System.DefaultWorkingDirectory)/build
-            -ArtifactsList ('$(ArtifactsJson)' | ConvertFrom-Json | Select-Object name, groupId)
-            -InformationAction Continue
-
-      - task: PowerShell@2
-        displayName: 'Copy artifacts to staging'
-        inputs:
-          pwsh: true
-          workingDirectory: $(Agent.BuildDirectory)
-          filePath: eng/scripts/Stage-MavenPackageArtifacts.ps1
-          arguments: >
-            -SourceDirectory $(System.DefaultWorkingDirectory)/build
-            -TargetDirectory $(Build.ArtifactStagingDirectory)
-            -Artifacts ('${{ replace(convertToJson(parameters.ReleaseArtifacts), '''', '`''') }}' | ConvertFrom-Json | Where-Object -Not skipPublishPackage )
-            -InformationAction Continue
-
       - task: Powershell@2
+        displayName: Test Step
         inputs:
-          filePath: $(Build.SourcesDirectory)/eng/scripts/Save-Package-Namespaces-Property.ps1
-          arguments: >
-            -ArtifactStagingDirectory $(Build.ArtifactStagingDirectory)
+          targetType: inline
           pwsh: true
-          workingDirectory: $(Pipeline.Workspace)
-        displayName: Update package properties with namespaces
-
-      - template: /eng/common/pipelines/templates/steps/publish-1es-artifact.yml
-        parameters:
-          ArtifactPath: $(Build.ArtifactStagingDirectory)
-          ArtifactName: '$(ArtifactName)'
-
-      # Troubleshooting artifacts are creating in the staging directory under the folder 'troubleshooting'.
-      # This will contain things such as heap dumps hprofs if testing hit OutOfMemory errors, log files captured
-      # during testing if tests failed, and linting reports.
-      - template: /eng/common/pipelines/templates/steps/publish-1es-artifact.yml
-        parameters:
-          ArtifactName: troubleshooting-$(System.StageName)-$(System.JobName)
-          ArtifactPath: $(System.DefaultWorkingDirectory)/troubleshooting
-          SbomEnabled: false
-          CustomCondition: and(not(succeeded()), eq(variables['HAS_TROUBLESHOOTING'], 'true'))
-
-      - template: /eng/common/pipelines/templates/steps/publish-1es-artifact.yml
-        parameters:
-          ArtifactName: 'repository-$(System.JobName)'
-          ArtifactPath: '$(System.DefaultWorkingDirectory)'
-          SbomEnabled: false
-          CustomCondition: or(eq(variables['CaptureRepositoryOnFailure'], 'true'), and(failed(), eq(variables['Build.Reason'],'Schedule')))
-
-      - template: /eng/common/pipelines/templates/steps/create-apireview.yml
-        parameters:
-          Artifacts: ${{parameters.ReleaseArtifacts}}
-
-      - template: /eng/common/pipelines/templates/steps/detect-api-changes.yml
-        parameters:
-          Artifacts: ${{parameters.Artifacts}}
-
-      - template: /eng/common/pipelines/templates/steps/validate-all-packages.yml
-        parameters:
-          Artifacts: ${{ parameters.Artifacts }}
-
-      - template: /eng/pipelines/templates/steps/post-job-cleanup.yml
-
-  - job: 'Analyze'
-    condition: and(succeeded(), ne(variables['Skip.Analyze'], 'true'))
-
-    pool:
-      name: $(LINUXPOOL)
-      image: $(LINUXVMIMAGE)
-      os: linux
-
-    steps:
-      - task: UsePythonVersion@0
-        displayName: 'Use Python $(PythonVersion)'
-        inputs:
-          versionSpec: $(PythonVersion)
-
-      # Skip sparse checkout for the `azure-sdk-for-<lang>-pr` private mirrored repositories
-      # as we require the GitHub service connection to be loaded.
-      - ${{ if not(contains(variables['Build.DefinitionName'], 'java-pr')) }}:
-        - template: /eng/common/pipelines/templates/steps/sparse-checkout.yml
-          parameters:
-            Paths:
-              - '**/*.xml'
-              - '**/*.md'
-              - '**/*.yml'
-              - '.vscode/cspell.json'
-              - '!sdk/**/test-recordings'
-              - '!sdk/**/session-records'
-
-      - task: PowerShell@2
-        displayName: 'Verify versions in POM files'
-        inputs:
+          script: >
+            $(Build.SourcesDirectory)/eng/scripts/test_script.ps1
+            -ServiceDirectory 'test'
+            -ExcludePaths ('${{ convertToJson(parameters.ExcludePaths) }}' | convertFrom-Json)
           pwsh: true
-          workingDirectory: $(Build.SourcesDirectory)
-          filePath: $(Build.SourcesDirectory)/eng/versioning/pom_file_version_scanner.ps1
-          arguments: -Debug:$$(IsDebug)
-
-      - task: PythonScript@0
-        displayName: 'Verify version text files'
-        inputs:
-          scriptPath: eng/versioning/find_unused_dependencies.py
-
-      - template: /eng/pipelines/templates/steps/generate-project-list-and-cache-maven-repository.yml
-        parameters:
-          JobType: 'Analyze'
-
-      - task: PowerShell@2
-        displayName: Generate directories variable for sparse checkout
-        inputs:
-          pwsh: true
-          filePath: $(Build.SourcesDirectory)/eng/scripts/Generate-ServiceDirectories-From-Project-List.ps1
-          arguments: >
-            -SourcesDirectory $(Build.SourcesDirectory)
-            -ProjectList $(ProjectList)
-
-      # Skip sparse checkout for the `azure-sdk-for-<lang>-pr` private mirrored repositories
-      # as we require the GitHub service connection to be loaded.
-      - ${{ if not(contains(variables['Build.DefinitionName'], 'java-pr')) }}:
-        - template: /eng/pipelines/templates/steps/sparse-checkout-repo-initialized.yml
-          parameters:
-            Paths: $(SparseCheckoutDirectories)
-            SkipCheckoutNone: true
-
-      - template: /eng/common/pipelines/templates/steps/check-spelling.yml
-        parameters:
-          CspellConfigPath: .vscode/cspell.json
-          ContinueOnError: false
-
-      - template: /eng/common/pipelines/templates/steps/set-test-pipeline-version.yml
-        parameters:
-          PackageNames: "azure-sdk-template,azure-sdk-template-two,azure-sdk-template-three"
-          ServiceDirectory: "template"
-          TestPipeline: ${{ parameters.TestPipeline }}
-
-      - template: /eng/common/pipelines/templates/steps/verify-readme.yml
-        parameters:
-          ScanPath: $(Build.SourcesDirectory)/sdk/${{ parameters.ServiceDirectory }}
-
-      - template: /eng/common/pipelines/templates/steps/verify-links.yml
-        parameters:
-          ${{ if eq(variables['Build.Reason'], 'PullRequest') }}:
-            Directory: ''
-            Urls: (eng/common/scripts/get-markdown-files-from-changed-files.ps1)
-          ${{ if ne(variables['Build.Reason'], 'PullRequest') }}:
-            Directory: sdk/${{ parameters.ServiceDirectory }}
-          CheckLinkGuidance: $true
-
-      - template: /eng/common/pipelines/templates/steps/verify-samples.yml
-        parameters:
-          ServiceDirectory: ${{ parameters.ServiceDirectory }}
-
-      # Use BasePathLength of 38 instead of the default 49 as some released files fail when the number is higher.
-      - template: /eng/common/pipelines/templates/steps/verify-path-length.yml
-        parameters:
-          SourceDirectory: $(Build.SourcesDirectory)
-          BasePathLength: 38
-
-      - ${{if ne(parameters.SDKType, 'data')}}:
-        - ${{ each artifact in parameters.Artifacts }}:
-          - ${{if ne(artifact.skipVerifyChangelog, 'true')}}:
-            - template: /eng/common/pipelines/templates/steps/verify-changelog.yml
-              parameters:
-                PackageName: ${{artifact.name}}
-                ServiceName: ${{parameters.ServiceDirectory}}
-                ForRelease: false
-
-      # We `install` the code quality reports tooling into our local m2 cache separately from building the Maven project
-      # reports. This means it is available as part of that, but also so that this is not documented in the project report.
-      - template: /eng/pipelines/templates/steps/install-reporting-tools.yml
-        parameters:
-          JdkVersion: ${{ parameters.JavaBuildVersion }}
-
-      - task: PowerShell@2
-        displayName: Verify Code Generation
-        inputs:
-          pwsh: true
-          filePath: $(Build.SourcesDirectory)/eng/scripts/Compare-CurrentToCodegeneration.ps1
-          arguments: >
-            -Directory sdk/${{ parameters.ServiceDirectory }}
-
-      - task: PowerShell@2
-        displayName: Verify TypeSpec Code Generation
-        continueOnError: ${{ eq(parameters.IgnoreVerifyTypeSpecCodeGenerationError, 'true') }}
-        inputs:
-          pwsh: true
-          filePath: $(Build.SourcesDirectory)/eng/scripts/TypeSpec-Compare-CurrentToCodegeneration.ps1
-          arguments: >
-            -Directory sdk/${{ parameters.ServiceDirectory }}
-
-      - template: /eng/pipelines/templates/steps/run-and-validate-linting.yml
-        parameters:
-          JavaBuildVersion: ${{ parameters.JavaBuildVersion }}
-          AdditionalLintingOptions: ${{ parameters.AdditionalLintingOptions }}
-          BuildParallelization: ${{ parameters.BuildParallelization }}
-          RunLinting: true
-          SDKType: ${{ parameters.SDKType }}
-
-      - template: /eng/pipelines/templates/steps/post-job-cleanup.yml
-
-      - template: /eng/common/pipelines/templates/steps/eng-common-workflow-enforcer.yml
-
-      # Troubleshooting artifacts are creating in the staging directory under the folder 'troubleshooting'.
-      # This will contain things such as heap dumps hprofs if testing hit OutOfMemory errors, log files captured
-      # during testing if tests failed, and linting reports.
-      - template: /eng/common/pipelines/templates/steps/publish-1es-artifact.yml
-        parameters:
-          ArtifactName: troubleshooting-$(System.StageName)-$(System.JobName)
-          ArtifactPath: $(System.DefaultWorkingDirectory)/troubleshooting
-          SbomEnabled: false
-          CustomCondition: and(not(succeeded()), eq(variables['HAS_TROUBLESHOOTING'], 'true'))
-
-      - template: /eng/common/pipelines/templates/steps/publish-1es-artifact.yml
-        parameters:
-          ArtifactName: 'repository-$(System.JobName)'
-          ArtifactPath: '$(System.DefaultWorkingDirectory)'
-          SbomEnabled: false
-          CustomCondition: or(eq(variables['CaptureRepositoryOnFailure'], 'true'), and(failed(), eq(variables['Build.Reason'],'Schedule')))
-
-  - template: /eng/common/pipelines/templates/jobs/generate-job-matrix.yml
-    parameters:
-      JobTemplatePath: /eng/pipelines/templates/jobs/ci.tests.yml
-      OsVmImage: $(LINUXVMIMAGE)
-      Pool: $(LINUXPOOL)
-      Os: linux
-      MatrixConfigs: ${{ parameters.MatrixConfigs }}
-      MatrixFilters: ${{ parameters.MatrixFilters }}
-      MatrixReplace: ${{ parameters.MatrixReplace }}
-      CloudConfig:
-        Cloud: Public
-      AdditionalParameters:
-        SDKType: ${{ parameters.SDKType }}
-        ServiceDirectory: ${{ parameters.ServiceDirectory }}
-        TestPipeline: ${{ parameters.TestPipeline }}
-        PreTestSteps: ${{ parameters.PreTestSteps }}
-        PreBuildSteps: ${{ parameters.PreBuildSteps }}
-        TestGoals: ${{ parameters.TestGoals }}
-        TestOptions: ${{ parameters.TestOptions }}
-        TestParallelization: ${{ parameters.TestParallelization }}
-        BuildParallelization: ${{ parameters.BuildParallelization }}
-        AdditionalLintingOptions: ${{ parameters.AdditionalLintingOptions }}
-        TimeoutInMinutes: ${{ parameters.TimeoutInMinutes }}
-        EnvVars: ${{ parameters.EnvVars }}
-        VersionOverride: ${{ parameters.VersionOverride }}
