--- a/sdk/template/ci.yml
+++ b/sdk/template/ci.yml
@@ -95,6 +95,10 @@ extends:
         # required by the above perf library
       - name: perf-test-core
         groupId: com.azure
+    ExcludePaths:
+      - sdk/foo
+      - sdk/bar
+      - sdk/foobar
     LiveTestStages:
       - template: /eng/pipelines/templates/stages/archetype-sdk-tests-isolated.yml
         parameters:
