--- a/sdk/keyvault/azure-security-keyvault-secrets/src/main/resources/META-INF/native-image/com.azure/azure-security-keyvault-secrets/proxy-config.json
+++ b/sdk/keyvault/azure-security-keyvault-secrets/src/main/resources/META-INF/native-image/com.azure/azure-security-keyvault-secrets/proxy-config.json
@@ -1,3 +1,3 @@
 [
-  ["com.azure.security.keyvault.secrets.implementation.SecretClientImpl$SecretClientService"]
+  ["com.azure.security.keyvault.secrets.implementation.SecretClientImpl$SecretService"]
 ]
