Update supported clouds to include China

--- a/sdk/spring/pipeline/tests-supported-spring-versions-template.yml
+++ b/sdk/spring/pipeline/tests-supported-spring-versions-template.yml
@@ -39,7 +39,7 @@ parameters:
 stages:
   - template: /eng/pipelines/templates/stages/archetype-sdk-tests-isolated.yml
     parameters:
-      SupportedClouds: "Public,UsGov"
+      SupportedClouds: "Public,China"
       TestResourceDirectories: ${{ parameters.TestResourceDirectories }}
       Artifacts: ${{ parameters.Artifacts }}
       TimeoutInMinutes: ${{ parameters.TimeoutInMinutes }}
