--- a/eng/.docsettings.yml
+++ b/eng/.docsettings.yml
@@ -131,6 +131,7 @@ known_content_issues:
   - ['sdk/keyvault/azure-security-keyvault-administration/README.md', '#3113']
   - ['sdk/monitor/azure-monitor-spring-native/README.md', '#3113']
   - ['sdk/parents/azure-client-sdk-parent/README.md', '#3113']
+  - ['sdk/parents/azure-client-sdk-parent-v2/README.md', '#3113']
   - ['sdk/parents/azure-code-customization-parent/README.md', '#3113']
   - ['sdk/parents/azure-perf-test-parent/README.md', '#3113']
   - ['sdk/parents/clientcore-parent/README.md', '#3113']
