--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,21 +3,23 @@
 # Please see the documentation for all configuration options:
 # https://docs.github.com/code-security/dependabot/dependabot-version-updates/configuration-options-for-the-dependabot.yml-file
 
+# This configuration will enable Dependabot version updates for all of our SDKs. It combines with the GitHub Action
+# workflow /.github/workflows/dependabot-update-external-deps.yml to maintain continuity with external_dependencies.txt
 version: 2
 updates:
   - package-ecosystem: "maven" # See documentation for possible values
-    directories: 
-      - "/sdk/*"
+    directories:
+      - "/sdk/*" # All pom files in the sdk directory
     schedule:
       interval: "daily"
     reviewers: ["jairmyree"]
     open-pull-requests-limit: 10
-    ignore:
-        - dependency-name: "*" 
+    ignore: # any specific dependencies or upgrade tupes that should be excluded from version updates
+        - dependency-name: "*"
           update-types: ["version-update:semver-major"]
         - dependency-name: "org.apache.spark*"
         - dependency-name: "io.projectreactor*"
         - dependency-name: "com.fasterxml.jackson*"
         - dependency-name: "org.springframework*"
-        
-          
+
+
