fix daily-dev-build-variable.yml condition to only skip the PR pipline

--- a/eng/pipelines/templates/jobs/ci.yml
+++ b/eng/pipelines/templates/jobs/ci.yml
@@ -141,8 +141,10 @@ jobs:
           ServiceDirectory: "template"
           TestPipeline: ${{ parameters.TestPipeline }}
 
-      # The daily dev build variable isn't used for PullRequests.
-      - ${{ if ne(variables['Build.Reason'], 'PullRequest') }}:
+      # The daily dev build variable isn't used for the PullRequests pipeline but is currently used
+      # to save off the packageInfo files for all ci pipeline. This needs to be skipped for the
+      # PR pipeline since the packageInfo files will be generated above.
+      - ${{ if and(ne(variables['Build.Reason'], 'PullRequest'), ne(parameters.ServiceDirectory, 'auto')) }}:
         - template: /eng/common/pipelines/templates/steps/daily-dev-build-variable.yml
           parameters:
             ServiceDirectory: ${{parameters.ServiceDirectory}}
