--- a/eng/pipelines/templates/stages/archetype-sdk-client.yml
+++ b/eng/pipelines/templates/stages/archetype-sdk-client.yml
@@ -14,6 +14,9 @@ parameters:
   - name: ServiceDirectory
     type: string
     default: not-specified
+  - name: ExcludePaths
+    type: object
+    default: []
   - name: MatrixConfigs
     type: object
     default:
